tree-sitter-esl37/corpus/dist_normal1.txt
=============
Normal Dist 1
=============

distribution
    normal normal1
        mean = 1, std = 0.1
    end
end

---

(source_file
    (distributions
        (normal_dist
            name: (identifier)
            mean: (integer)
            std: (float)
        )
    )
)
