tree-sitter-esl37/corpus/dist_uniform1.txt
==============
Uniform Dist 1
==============

distribution
    uniform uniform1
        low=0.0, high=1.0
    end
end

---

(source_file
    (distributions
        (uniform_dist
            name: (identifier)
            low: (float)
            high: (float)
        )
    )
)
