tree-sitter-esl37/corpus/distributions.txt
===============
Discrete Dist 1
===============

distribution
    discrete fixed1
        p = 1, v = var1
    end

    discrete fixed1
        p = 1, v = 1
        p = 1, v = 2.0
        p = 0.5, v = var2
    end
end

---

(source_file
    (distributions
        (discrete_dist
            name: (identifier)
            pv: (discrete_pv
                p: (integer)
                v: (reference (identifier))
            )
        )
        (discrete_dist
            name: (identifier)
            pv: (discrete_pv
                p: (integer)
                v: (integer)
            )
            pv: (discrete_pv
                p: (integer)
                v: (float)
            )
            pv: (discrete_pv
                p: (float)
                v: (reference (identifier))
            )
        )
    )
)


=============
Normal Dist 1
=============

distribution
    normal normal1
        mean = 1, std = 0.1, min = 0
    end

    normal normal2
        mean = var1, std = var2, min = 0.0, max = 1.0
    end
end

---

(source_file
    (distributions
        (normal_dist
            name: (identifier)
            mean: (integer)
            std: (float)
            min: (integer)
        )

        (normal_dist
            name: (identifier)
            mean: (reference (identifier))
            std: (reference (identifier))
            min: (float)
            max: (float)
        )
    )
)


==============
Uniform Dist 1
==============

distribution
    uniform uniform1
        low=0.0, high=1.0
    end

    uniform uniform1
        low = var1, high = var2
    end
end

---

(source_file
    (distributions
        (uniform_dist
            name: (identifier)
            low: (float)
            high: (float)
        )

        (uniform_dist
            name: (identifier)
            low: (reference (identifier))
            high: (reference (identifier))
        )
    )
)
