tree-sitter-esl37/corpus/edgeset1.txt
=========
Edgeset 1
=========

__test statement:
    edgeset seed_edges = { e : uniform(1) < 0.1 }
    foreach e in seed_edges:
        e.active = True
    end
end

---

(source_file
    (test_statement
        (edgeset_statement
            (identifier)
            (identifier)
            (binary_expression
                (function_call
                    (reference (identifier))
                    (integer)
                )
                (float)
            )
        )
        (foreach_loop
            (identifier)
            (reference (identifier))
            (assignment_statement
                (reference (identifier) (identifier))
                (true)
            )
        )
    )
)
