tree-sitter-esl37/corpus/func1.txt
==========
Function 1
==========

def func() -> int:
    return 1
end

def func():
    pass
end

def func(a: int, b: float) -> float:
    return 1.0
end

---

(source_file
    (function
        name: (identifier)
        params: (function_params)
        return: (type (identifier))
        body: (function_body
            (return_statement (integer))
        )
    )
    (function
        name: (identifier)
        params: (function_params)
        body: (function_body
            (pass_statement)
        )
    )
    (function
        name: (identifier)
        params: (function_params
            (function_param
                name: (identifier)
                type: (type (identifier))
            )
            (function_param
                name: (identifier)
                type: (type (identifier))
            )
        )
        return: (type (identifier))
        body: (function_body
            (return_statement (float))
        )
    )
)
