tree-sitter-esl37/corpus/literal1.txt
=========
Literal 1
=========

__test expression:
    a
end

__test expression:
    1
end

__test expression:
    1.0
end

__test expression:
    1.0e-5
end

__test expression:
    True
end

__test expression:
    False
end

---

(source_file
    (test_expression
        (reference (identifier))
    )
    (test_expression
        (integer)
    )
    (test_expression
        (float)
    )
    (test_expression
        (float)
    )
    (test_expression
        (true)
    )
    (test_expression
        (false)
    )
)
