tree-sitter-esl37/corpus/node.txt
======
Node 1
======

node
    pid: int static node key
    age: int static
    gender: gender_t static

    will_vax: bool
    will_mask: bool
    is_masking: bool
end

node pid: int node key ; age: int ; gender: gender_t ; end

---

(source_file
    (node
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
            annotation: (node_annotation)
            annotation: (node_annotation)
        )
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
            annotation: (node_annotation)
        )
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
            annotation: (node_annotation)
        )
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
        )
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
        )
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
        )
    )

    (node
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
            annotation: (node_annotation)
        )
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
        )
        field: (node_field
            name: (identifier)
            type: (reference (identifier))
        )
    )
)
