tree-sitter-esl37/corpus/select.txt
==============
Select using 1
==============

__test statement:
    select vset1 using uniform01
    select vset1 using [v: node -> bool]( v.is_seed )
end

---

(source_file
    (test_statement
        (select_using
            set: (reference (identifier))
            function: (reference (identifier))
        )
        (select_using
            set: (reference (identifier))
            function: (inline_expression_function
                name: (identifier)
                type: (reference (identifier))
                rtype: (reference (identifier))
                expression: (reference (identifier) (identifier))
            )
        )
    )
)

===============
Select sample 1
===============

__test statement:
    select vset2 sample approx 5 from vset1
    select vset2 sample approx nsamples / max_samples() from vset1
end

---

(source_file
    (test_statement
        (select_sample
            set: (reference (identifier))
            amount: (integer)
            parent: (reference (identifier))
        )
        (select_sample
            set: (reference (identifier))
            amount: (binary_expression
                left: (reference (identifier))
                right: (function_call
                    function: (reference (identifier))
                )
            )
            parent: (reference (identifier))
        )
    )
)
